CloudFormation.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: test-ml
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.small

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId: ami-035b3c7efe6d061d5
      IamInstanceProfile: !Ref IAMEC2InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update
          yum install python36 python36-virtualenv -y
          python3.6 -m venv env
          source env/bin/activate
          pip3 install tensorflow pandas flask flask-cors gunicorn
          aws s3 cp s3://test-ml-bucket/analysisPlots . --recursive
          aws s3 cp s3://test-ml-bucket/src . --recursive
          cd src
          gunicorn --bind 0.0.0.0:80 --workers 1 wsgi:app
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: "22"
        ToPort: "22"
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: "80"
        ToPort: "80"
  IAMEC2InstanceProfile: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - Ref: "EC2IAMRole"
  EC2IAMRole:
    Type: "AWS::IAM::Role"
    Properties:
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
